packages/app/client/src/ui/dialogs/botCreationDialog/botCreationDialog.scss
.main {
  min-width: 464px;
  width: 464px;
  max-height: 454px;

  a {
    color: var(--link-color);
    text-decoration: none;
    line-height: 20px;
  }
}

.multi-input-row {
  justify-content: space-between;
}

.input-container {
  width: 100%;
  & + div {
    margin-left: 8px;
  }
}

.bot-create-form {
  position: relative;
}

.endpoint-warning {
  height: 11px;
  color: var(--endpoint-warning);
  font-family: var(--default-font-family);
  font-size: 11px;
  line-height: 11px;
}

.key {
  width: 175px;
  margin: 16px 145px 0 32px;
  > label[aria-disabled] {
    color: initial;
  }
}

.encrypt-key-check-box {
  margin-top: 30px;
}

.actions-list {
  list-style: none;
  position: absolute;
  right: 106px; // when re-enabling 'Generate new secret' link, original value: 0;
  bottom: 12.5px;
  padding: 0;
  margin: 0;

  li {
    display: inline;
    padding: 2px 12px;
  }

  li + li {
    border-left: 1px solid var(--neutral-11);
  }

  .disabled-action {
    color: var(--link-color-disabled);
    cursor: default;
  }
}

